syntax = "proto3";

package sensors;

//python -m grpc_tools.protoc -I. --python_out=. --grpc_python_out=. sensor.proto

// Estrutura dos dados do sensor
message SensorData {
    repeated float Tensao = 1;
    repeated float Corrente = 2;
    repeated float Potencia = 3;
    repeated float Energia = 4;
    repeated float FatorPot = 5;
    string Bloco = 6;
    int32 Estado = 7;
}

// Informações de um dispositivo
message DeviceInfo {
    string TIPO = 1;
    string BLOCO = 2;
    string IP = 3;
    int32 PORTA_ENVIO_TCP = 4;
}

// Informações de um gateway
message GatewayInfo {
    string TIPO = 1;
    int32 GTW_ID = 2;
    string IP = 3;
    int32 PORTA_ENVIO_UDP = 4;
}

// Coleção de dados do sensor
message SensorDataCollection {
    repeated SensorData sensor_data = 1;
}

// Comando enviado ao gateway
message Command {
    oneof payload {
        ReceiveData receive_data = 1;
        SetState set_state = 2;
        List list = 3;
        CheckState check_state = 4;
    }
}

message ReceiveData {
    // Nenhum campo adicional necessário
}

message SetState {
    string block_id = 1;
    bool state = 2;
}

message List {
    string list_request = 1;
}

message CheckState {
    string block_id = 1;
}

// Lista de dispositivos conectados
message DeviceList {
    repeated DeviceInfo devices = 1;
}

// Definição da estrutura de um sensor
message Sensor {
    string name = 1;
    string ip = 2;
    int32 port = 3;
}

// Definição de uma lista de sensores
message SensorList {
    repeated Sensor sensors = 1;
}

// Mudança de estado de um sensor
message StateChange {
    string new_state = 1;
}